# Pointnet2_PyTorch

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  MANIFEST.in  README.rst  __init__.py  pyproject.toml  requirements.txt  setup.py  tox.ini  train_cls.py  train_sem_seg.py
data/: .gitignore  Indoor3DSemSegLoader.py  ModelNet40Loader.py  data_utils.py
models/: Pointnet2Cls.py  Pointnet2SemSeg.py  TransformNets.py  __init__.py  pointnet2_msg_cls.py  pointnet2_msg_sem.py  pointnet2_ssg_cls.py  pointnet2_ssg_sem.py
pointnet2/: __init__.py  train.py
pointnet2/_ext-src/include/: ball_query.h  cuda_utils.h  group_points.h  interpolate.h  sampling.h  utils.h
pointnet2/_ext-src/src/: ball_query.cpp  ball_query_gpu.cu  group_points.cpp  interpolate.cpp  interpolate_gpu.cu  sampling.cpp  sampling_gpu.cu
pointnet2/_ext/include/: utils.h
pointnet2/_ext/src/: ball_query.cpp  bindings.cpp  group_points.cpp  (+2 more)
pointnet2/config/: config.yaml
pointnet2/data/: Indoor3DSemSegLoader.py  ModelNet40Loader.py  __init__.py  data_utils.py
pointnet2/models/: __init__.py  pointnet2_msg_cls.py  pointnet2_msg_sem.py  pointnet2_ssg_cls.py  pointnet2_ssg_sem.py
pointnet2/train/: train_cls.py  train_sem_seg.py
pointnet2/utils/: __init__.py  build_ffi.py  linalg_utils.py  pointnet2_modules.py  pointnet2_utils.py
pointnet2_ops_lib/: MANIFEST.in  setup.py
pointnet2_ops_lib/pointnet2_ops/: pointnet2_modules.py  pointnet2_utils.py
tests/: conftest.py  test_cls.py  test_cls_msg.py  test_cls_ssg.py  test_dataloaders.py  test_semseg.py  test_semseg_msg.py  test_semseg_ssg.py
utils/: .gitignore  CMakeLists.txt  build_ffi.py  data_utils.py  linalg_utils.py  pointnet2_modules.py  pointnet2_utils.py  pytorch_utils.py  setup.py
utils/cinclude/: ball_query.hpp  ball_query_gpu.h  cuda_utils.h  group_points.hpp  group_points_gpu.h  group_points_gpu.hpp  group_points_wrapper.h  interpolate_gpu.h  interpolate_wrapper.h  roi_mask_points_gpu.h  roi_mask_wrapper.h  sampling.hpp  sampling_gpu.h  sampling_gpu.hpp  sampling_wrapper.h
utils/csrc/: ball_query.c  ball_query.cpp  ball_query_gpu.cu  group_points.c  group_points.cpp  group_points_gpu.cu  interpolate.c  interpolate_gpu.cu  module_export.cpp  roi_mask_points_gpu.cu  roi_mask_points_wrapper.c  sampling.c  sampling.cpp  sampling_gpu.cu
utils/extension-cpp-master/: README.md  benchmark.py  check.py  grad_check.py
utils/extension-cpp-master/.github/: ISSUE_TEMPLATE.md
utils/extension-cpp-master/cpp/: jit.py  lltm.cpp  lltm.py  setup.py
utils/extension-cpp-master/cuda/: lltm.py  lltm_cuda.cpp  lltm_cuda_kernel.cu
utils/extension-cpp-master/python/: lltm.py  lltm_baseline.py
utils/pointnet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+19 files in other folders)
